# MegaStoreUniFECAF

./: .gitignore  Cargo.toml  README.md
benches/: search_bench.rs
data/: products.json  relations.json
docs/: ENTREGA.md  relatorio_tecnico.md
src/: engine.rs  index.rs  lib.rs  main.rs  models.rs  recommendation.rs  search.rs  tokenizer.rs
tests/: integration.rs
