[package]
name = "megastore-search"
version = "0.1.0"
edition = "2021"
authors = ["Dexter"]
description = "Sistema de busca otimizado para catálogo de produtos com índice hash e recomendações por grafo."
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "search_bench"
harness = false
